# ozon_scraper

./: .gitignore  README.md  pyproject.toml  requirements.txt
ozon_scraper/: __main__.py  functions.py  main.py
