[project]
name = "ozon-scraper"
version = "0.1.0"
description = "Парсит данные о товарах с ozon"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4==0.0.2",
    "lxml==5.3.0",
    "undetected-chromedriver==3.5.5",
    "setuptools==80.8.0",
    "loguru==0.7.3",
]

[tool.ruff.lint]
select = ["ALL"]
preview = true
ignore = [
    # Ошибки связанные с кирилицей
    "RUF001", "RUF002", "RUF003",

    # Докстроки (мне лень)
    "D103", "D104", "D100", "CPY001",
]
